--- a/config.json
+++ b/config.json
@@ -1,3 +1,576 @@
 {
-    "name": "Lee"
+    "name": "Lee",
+    "data_folder": "C:\\Users\\vitro\\Documents\\我的坚果云\\备货单\\",
+    "data_path": "E:\\data.xls",
+    "huawei_out_path": "E:\\华为.xlsx",
+    "component_out_path": "E:\\配件数量.xlsx",
+    "final_out_path": "E:\\合并.xlsx",
+    "out_folder": "E:\\",
+    "out_name": "合并.xlsx",
+    "path_init": "初始.xlsx",
+    "print_column_quantity": 55,
+    "huawei_filters": [
+        "苹果", "11", "12", "XS", "xs", "XR", "7P/8P", "iPhone", "IPhone", "单支架"
+    ],
+    "huawei_colors": [
+        "蓝", "玫红", "绿"
+    ],
+    "huawei_stalls": [
+        "汇通&1楼驰金", "经济&5楼顺发"
+    ],
+    "level": 1,
+    "stall": {
+        "康乐北区&4楼加满": {
+            "limit": 8,
+            "merge": [
+                "红爱心", "腮红"
+            ]
+        },
+        "康乐北区&4楼7街": {
+            "limit": 8,
+            "merge": [
+                "Lmeon", "英文浅蓝渐变", "紫橘色渐变"
+            ]
+        },
+        "康乐&4楼鑫荣": {
+            "merge": [
+                "丝巾长挂绳", "糖果"
+            ]
+        },
+        "康乐&4楼淘友会": {
+            "limit": 10,
+            "merge": [
+                "蓝裤子", "红裤子"
+            ]
+        },
+        "康乐北区&3楼根据地": {
+            "limit": 10,
+            "merge":[
+                "HappyDay", "方形奶油色", "蓝橘", "尾巴", "纯色方形", "紫框镜头透明壳", "风车"
+            ]
+        },
+        "康乐&5楼天易佳": {
+            "merge": [
+                "甜甜圈"
+            ]
+        },
+        "康乐&5楼卡夫": {
+            "limit": 10,
+            "merge":[
+                "冰川蓝"
+            ]
+        },
+        "康乐&3楼千彩新店": {
+            "merge":[
+                "Favorite", "斑点狗"
+            ]
+        },
+        "通信&5楼新东升": {
+            "limit": 10,
+            "merge": [
+                "NNN", "弹簧绳", "向日葵", "布艺腕带"
+            ]
+        },
+        "通信&5楼众喜": {
+            "merge" :[
+                "土司熊"
+            ]
+        },
+        "通信&5楼海军": {
+            "merge":[
+                "腕带毛绒"
+            ]
+        },
+        "通信&5楼女同学": {
+            "merge":[
+                "白英文"
+            ]
+        },
+        "通信&5楼凡品": {
+            "merge": [
+                "糖果色", "小绵羊"
+            ]
+        },
+        "通信&5楼元气少女": {
+            "limit": 15,
+            "merge":[
+                "棕白拼色", "圆形橘子"
+            ]
+        },
+        "通信&5楼乐巢": {
+            "merge": [
+                "指环扣挂绳"
+            ]
+        },
+        "通信&5楼丹薇": {
+            "limit": 10,
+            "merge":[
+                "花朵兔子"
+            ]
+        },
+        "通信&4楼金顿": {
+            "merge":[
+                "小熊饼干人", "粉蝴蝶"
+            ]
+        },
+        "通信&4楼祥伦": {
+            "merge":[
+                "加宽挂绳"
+            ]
+        },
+        "通信&4楼有糖": {
+            "limit": 10,
+            "merge":[
+                "橘底绿圆圈晕染"
+            ]
+        },
+        "通信&4楼小清饰": {
+            "merge":[
+                "考拉挂件"
+            ]
+        },
+        "通信&4楼唯爆": {
+            "limit": 15,
+            "merge":[
+                "玫红爱心", "水晶小熊", "蝴蝶挂件"
+            ]
+        },
+        "通信&4楼4c02": {
+            "limit": 8,
+            "merge":[
+                "渐变C"
+            ]
+        },
+        "经济&5楼顺发": {
+            "limit": 15,
+            "merge": [
+                "红背包"
+            ]
+        },
+        "经济&5楼配件": {
+            "limit": 10,
+            "merge":[
+                "3张卡纸"
+            ]
+        },
+        "经济&5楼GT": {
+            "limit": 15,
+            "merge": [
+                "太阳花挂链", "柠檬黄"
+            ]
+        },
+        "经济&4楼液态硅胶": {
+            "merge": [
+                "液态硅胶"
+            ]
+        },
+        "经济&4楼东源": {
+            "limit": 15,
+            "merge": [
+                "玻璃水晶支架", "蓝色线条标签"
+            ]
+        },
+        "经济&3楼汇元": {
+            "merge":[
+                "磨砂背面"
+            ]
+        },
+        "汇通&1楼驰金": {
+            "limit": 15,
+            "merge":[
+                "呆萌"
+            ]
+        },
+        "汇通&1楼福气": {
+            "limit": 10,
+            "merge":[
+                "落日", "质感皮纹"
+            ]
+        },
+        "汇通&1楼楚阳": {
+            "limit": 5,
+            "merge": [
+                "英文", "4个笑脸"
+            ]
+        },
+        "汇通&1楼": {
+            "merge":[
+                "磨砂黑色"
+            ]
+        }
+
+    },
+    
+    "keys": {
+        "extract_huawei_stall": [
+            "驰金", "顺发"
+        ],
+        "extract_huawei_filter": [
+            "苹果", "11", "12", "XS", "xs", "XR", "7P/8P", "iPhone", "IPhone", "单支架"
+        ],
+        "extract_huawei_split_colors": [
+            "玫红", "蓝", "绿"
+        ],
+        "sort_stall": [
+            "康乐", "通信", "经济", "汇通", "太平洋", "设置"
+        ],
+        "name_filter": [
+
+            "备注", ""
+        ],
+        "merge": {
+            "康乐北区&4楼加满": [
+                "红爱心", "腮红"
+            ],
+            "康乐北区&4楼7街": [
+                "Lmeon", "英文浅蓝渐变", "紫橘色渐变"
+            ],
+            "康乐&4楼鑫荣": [
+                "丝巾长挂绳", "糖果"
+            ],
+            "康乐&4楼淘友会": [
+                "蓝裤子", "红裤子"
+            ],
+            "康乐北区&3楼根据地": [
+                "HappyDay", "方形奶油色", "蓝橘", "尾巴", "纯色方形", "紫框镜头透明壳", "风车"
+            ],
+            "康乐&5楼天易佳": [
+                "甜甜圈"
+            ],
+            "康乐&5楼卡夫":[
+                "冰川蓝"
+            ],
+            
+            "康乐&3楼千彩新店": [
+                "Favorite"
+            ],
+
+            "通信&5楼新东升": [
+                "NNN", "弹簧绳", "向日葵", "布艺腕带"
+            ],
+            "通信&5楼海军": [
+                "腕带毛绒"
+            ],
+            "通信&5楼众喜": [
+                "爱心土司"
+            ],
+            "通信&5楼女同学": [
+                "白英文"
+            ],
+            "通信&5楼凡品": [
+                "糖果色", "小绵羊"
+            ],
+            "通信&5楼元气少女": [
+                "棕白", "圆形橘子"
+            ],
+            "通信&5楼乐巢": [
+                "指环扣挂绳"
+            ],
+            "通信&5楼丹薇": [
+                "花朵兔子"
+            ],
+            "通信&4楼金顿": [
+                "小熊饼干人", "粉蝴蝶"
+            ],
+            "通信&4楼祥伦": [
+                "加宽挂绳"
+            ],
+            "通信&4楼有糖": [
+                "橘底绿圆圈晕染"
+            ],
+            "通信&4楼小清饰": [
+                "考拉挂件"
+            ],
+            "通信&4楼唯爆": [
+                "玫红爱心", "水晶小熊", "蝴蝶挂件"
+            ],
+            "通信&4楼4c02": [
+                "渐变C"
+            ],
+            "经济&5楼顺发": [
+                "红背包"
+            ],
+            "经济&5楼配件": [
+                "3张卡纸"
+            ],
+            "经济&5楼GT": [
+                "太阳花挂链", "柠檬黄"
+            ],
+            "经济&4楼液态硅胶": [
+                "液态硅胶"
+            ],
+            "经济&4楼东源": [
+                "玻璃水晶支架", "蓝色线条标签"
+            ],
+            "经济&4楼贝贝利": [
+                "抹茶绿"
+            ],
+            "经济&3楼汇元": [
+                "磨砂背面"
+            ],
+            "汇通&1楼驰金": [
+                "呆萌"
+            ],
+            "汇通&1楼福气": [
+                "落日", "质感皮纹"
+            ],
+            "汇通&1楼楚阳": [
+                "英文", "4个笑脸"
+            ],
+            "汇通&1楼": [
+                "磨砂黑色"
+            ]
+            
+        }
+    },
+    "str": {
+        "ding": "定",
+        "mark": "备注"
+    },
+    "columns": {
+        "stall": "档口",
+        "name": "单品名称",
+        "quantity": "单品销售数量",
+        "color": "颜色",
+        "sort_name": "排序名"
+    },
+    
+    "components": [
+        {
+            "name": "呆萌黄花朵支架",
+            "keys": ["呆萌黄"]
+        },
+        {
+            "name": "红背包支架",
+            "keys": ["红背包"]
+        },
+        {
+            "name": "蓝绿圆形贝母支架",
+            "keys": ["蓝绿圆形贝母", "金边绿贝母"]
+        },
+        {
+            "name": "绿色鳄鱼支架",
+            "keys": ["绿色鳄鱼"]
+        },
+        {
+            "name": "考拉挂件",
+            "keys": ["考拉挂件"]
+        },
+        {
+            "name": "樱桃泰迪支架",
+            "keys": ["樱桃泰迪"]
+        },
+        {
+            "name": "冰淇淋恐龙支架",
+            "keys": ["冰淇淋恐龙"]
+        },
+        {
+            "name": "大眼睛配件",
+            "keys":["红鼻子标签", "大眼睛", "光面蓝色"]
+        },
+        {
+            "name": "搞怪玩偶挂件",
+            "keys":["搞怪玩偶"]
+        },
+        {
+            "name": "黑底be支架",
+            "keys":["黑底be", "玫红小笑脸"]
+        },
+        {
+            "name": "抿嘴小熊支架",
+            "keys":["抿嘴小熊"]
+        },
+        {
+            "name": "透明绿色水晶支架",
+            "keys":["透明绿色水晶", "透明绿色"]
+        },
+        {
+            "name": "毛绒鼻环支架",
+            "keys":["鼻环"]
+        },
+        {
+            "name": "贝壳纹支架",
+            "keys":["贝壳纹支架"]
+        },
+        {
+            "name": "2只小熊支架",
+            "keys": ["2只小熊支架"]
+        },
+        {
+            "name": "红裤子支架",
+            "keys":["红裤子"]
+        },
+        {
+            "name": "蓝裤子支架",
+            "keys":["蓝裤子"]
+        },
+        {
+            "name": "蛋糕小熊支架",
+            "keys":["蛋糕小熊"]
+        },
+        {
+            "name": "绿色鳄鱼支架",
+            "keys": ["绿色鳄鱼"]
+        },
+        {
+            "name": "渐变绿色圆形支架",
+            "keys":["渐变绿色圆形"]
+        },
+        {
+            "name": "叶子橙子支架",
+            "keys":["叶子橙子"]
+        },
+        {
+            "name": "云朵支架",
+            "keys":["云朵支架"]
+        },
+        {
+            "name": "黑白小熊支架",
+            "keys":["黑白小熊"]
+        },
+        {
+            "name": "粉色花蕊支架",
+            "keys":["粉色花蕊"]
+        },
+        {
+            "name": "粉卡比支架",
+            "keys":["粉卡比"]
+        },
+        {
+            "name": "花朵蝴蝶支架",
+            "keys":["花朵蝴蝶"]
+        },
+        {
+            "name": "镜面字母hey支架",
+            "keys":["镜面字母hey"]
+        },
+        {
+            "name": "银色方形支架",
+            "keys":["银色方形"]
+        },
+        {
+            "name": "热狗包",
+            "keys":["热狗包"]
+        },
+        {
+            "name": "黄色笑脸支架",
+            "keys":["黄色笑脸"]
+        },
+        {
+            "name": "走路音乐耳机套挂件",
+            "keys":["走路音乐"]
+        },
+        {
+            "name": "黑底字母耳机套挂件",
+            "keys":["黑底字母设计"]
+        },
+        {
+            "name": "西红柿支架",
+            "keys":["西红柿支架", "番茄支架"]
+        },
+        {
+            "name": "金边橘色贝母圆形支架",
+            "keys":["金边橘色贝母圆形"]
+        },
+        {
+            "name": "爱心镭射粉支架",
+            "keys":["支架镭射粉"]
+        },
+        {
+            "name": "白色立体花朵支架",
+            "keys":["白色立体花朵", "大珍珠链条"]
+        },
+        {
+            "name": "银色挂链",
+            "keys":["银色挂链"]
+        },
+        {
+            "name": "黑底字母8支架",
+            "keys":["黑底字母8"]
+        },
+        {
+            "name": "流沙笑脸支架",
+            "keys":["流沙笑脸"]
+        },
+        {
+            "name": "彩绘紫色圆形支架",
+            "keys":["Bonjour"]
+        },
+        {
+            "name": "水晶小熊挂件",
+            "keys":["HappyDay"]
+        },
+        {
+            "name": "柠檬支架",
+            "keys":["柠檬"]
+        },
+        {
+            "name": "抿嘴小熊支架",
+            "keys":["抿嘴小熊"]
+        },
+        {
+            "name": "透明蓝色水晶支架",
+            "keys":["透明蓝色水晶"]
+        },
+        {
+            "name": "滴胶透明红爱心熊支架",
+            "keys":["滴胶透明红爱心熊"]
+        },
+        {
+            "name": "铜锣烧支架",
+            "keys":["铜锣烧"]
+        },
+        {
+            "name": "可爱方糖支架",
+            "keys":["可爱方糖"]
+        },
+        {
+            "name": "金边紫色爱心",
+            "keys":["金边紫色爱心"]
+        },
+        {
+            "name": "绿色贝母爱心支架",
+            "keys":["绿色贝母爱心"]
+        },
+        {
+            "name": "金边白色爱心支架",
+            "keys":["金边白色爱心"]
+        },
+        {
+            "name": "滴胶金边黑底爱心支架",
+            "keys":["滴胶金边黑底爱心"]
+        }
+
+    ],
+    "model_keys": [
+        " ",
+        "7/8", "iPhone", "IPhone", "7P/8Plus", "x/xs", "X/XS", "XR", "XSMAX",
+        "11ProMax", "11Promax", "11pro", "",
+        "苹果11", "11Pro", "12ProMax", 
+        "ProMax", "Pro", "MAX", "5.8寸","max", "6.5寸",
+        "12Mini", "12mini", "苹果12", "12/12Pro","Iphone", "IPhong",
+        "iphone",
+        "12pro", "12", "苹果", "6.1寸", "Airpods1/2代", "Airpods3代", "Airpord1/2代",
+        "Airpord3代", "Airpod1/2", "Airpod3", "Aipords12代", "Airpods12",
+        "Airpords12代", "Airpords3代", "airpods12","airpods3",
+        "airpods12代", "airpods3代", "airpods12代","airpods12代",
+        "华为", "P30pro", "P30Pro", "p30pro", "p30Pro", "p30", "P30",
+        "P40Pro", "P40pro", "p40", "P40",
+        "Mate30Pro", "mate30Pro", "Mate30pro", "mate30pro",
+        "Mate30", "mate30",
+        "Mate40Pro", "mate40Pro", "Mate40pro", "mate40pro",
+        "Mate40", "mate40",
+        "Nova5", "nova5",
+        "Nova6", "nova6",
+        "Nova7Pro", "Nova7pro", "nova7Pro", "nova7pro",
+        "Nova7", "nova7",
+        "Nova8", "nova8", "/", "airpods12代",
+        "-", "+"
+    ],
+    "stall_stall": {
+        
+    },
+    "merge": {
+
+    }
 }
