--- a/configg.json
+++ b/configg.json
@@ -1,4 +1,5 @@
 {
+    "hello": "Java",
     "name": "Lee",
     "data_folder": "C:\\Users\\vitro\\Documents\\我的坚果云\\备货单\\",
     "data_path": "E:\\data.xls",
